--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700|Nunito+Sans:300,400,600,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -155,10 +157,27 @@
 </section>
 <section class="testimonials">
     <div class="container">
-        <p class="testimonials_text">“ Outstanding job and exceeded all expectations. It was a pleasure
-            to work with them on a sizable first project and am looking
-            forward to start the next one asap.”</p>
-        <p class="name">Michael Hopkins</p>
+        <!-- Set up your HTML -->
+        <div class="owl-carousel">
+            <div>
+                <p class="testimonials_text">“ Outstanding job and exceeded all expectations. It was a pleasure
+                to work with them on a sizable first project and am looking
+                forward to start the next one asap.”</p>
+                <p class="name">Michael Hopkins</p>
+            </div>
+            <div>
+                <p class="testimonials_text">“ Outstanding job and exceeded all expectations. It was a pleasure
+                    to work with them on a sizable first project and am looking
+                    forward to start the next one asap.”</p>
+                <p class="name">Michael Hopkins</p>
+            </div>
+            <div>
+                <p class="testimonials_text">“ Outstanding job and exceeded all expectations. It was a pleasure
+                    to work with them on a sizable first project and am looking
+                    forward to start the next one asap.”</p>
+                <p class="name">Michael Hopkins</p>
+            </div>
+        </div>
     </div>
 </section>
 <section class="clients">
@@ -221,5 +240,11 @@
         </div>
     </div>
 </footer>
+<script
+        src="https://code.jquery.com/jquery-2.2.4.min.js"
+        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+        crossorigin="anonymous"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
